name:                vimoutliner
version:             0.2.0.0
synopsis:            Parse the OTL text format used by vimoutliner.
description:         Command-line tools and a Haskell library for parsing and transforming the OTL text format used by vimoutliner.
homepage:            https://github.com/samstokes/vimoutliner-tools
-- TODO license and license-file
author:              Sam Stokes
maintainer:          me@samstokes.co.uk
copyright:           2011-2016 Sam Stokes
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Text.OTL
                       Text.OTL.Pandoc
                       Text.OTL.Parser
                       Text.OTL.Types
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , data-default
                     , parsec
                     , indents
                     , pandoc
                     , pandoc-types
  default-language:    Haskell2010

executable vimoutliner-pandoc
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , bytestring
                     , optparse-applicative
                     , parsec
                     , pandoc
                     , vimoutliner
  default-language:    Haskell2010

test-suite vimoutliner-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec
                     , hspec-expectations
                     , pandoc
                     , shakespeare
                     , text
                     , vimoutliner
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/samstokes/vimoutliner-tools
