name: OTL
version: 0.0.1
cabal-version: -any
build-type: Simple
license: AllRightsReserved
license-file: ""
copyright:
maintainer:
build-depends: base -any, bytestring -any, indents -any,
               pandoc -any, pandoc-types -any, parsec -any
stability:
homepage:
package-url:
bug-reports:
synopsis:
description: .
category:
author:
tested-with:
data-files:
data-dir: ""
extra-source-files:
extra-tmp-files:
exposed-modules: Text.OTL Text.OTL.Pandoc Text.OTL.Parser
                 Text.OTL.Types
exposed: True
buildable: True
build-tools:
cpp-options:
cc-options:
ld-options:
pkgconfig-depends:
frameworks:
c-sources:
default-language:
other-languages:
default-extensions:
other-extensions:
extensions:
extra-libraries:
extra-lib-dirs:
includes:
install-includes:
include-dirs:
hs-source-dirs: src
other-modules:
ghc-prof-options:
ghc-shared-options:
ghc-options: -Wall
hugs-options:
nhc98-options:
jhc-options:
 
executable: OTL
main-is: Main.hs
buildable: True
build-tools:
cpp-options:
cc-options:
ld-options:
pkgconfig-depends:
frameworks:
c-sources:
default-language:
other-languages:
default-extensions:
other-extensions:
extensions:
extra-libraries:
extra-lib-dirs:
includes:
install-includes:
include-dirs:
hs-source-dirs: src
other-modules: Text.OTL Text.OTL.Types Text.OTL.Parser
               Text.OTL.Pandoc
ghc-prof-options:
ghc-shared-options:
ghc-options: -Wall
hugs-options:
nhc98-options:
jhc-options: